<resources>

    <string name="app_name">Chinese checkers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="begin_game">Begin Game</string>
    <string name="name_label">Name:</string>
    <string name="server_ip_code">Server\'s IP Code:</string>
    <string name="remove_player">Remove Player</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="guest">Guest</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string><string name="start_the_game">Start Game!</string>
    
    <string name="dialog_continue_label">Continue Playing Game</string>
    <string name="dialog_quit_label">Quit</string>
    <string name="dialog_quit_question">Do you really want to quit?</string>
    <string name="local_tab">Local Game</string>
    <string name="remote_tab">Remote Game</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="player6">Player 6</string>

    <string name="local_player">Local Player</string>
    <string name="remote_player">Remote Player</string>
    <string name="ai_easy">Easy AI</string>
    <string name="ai_hard">Hard AI</string>

    <string name="game_rules">Chinese Checker Manual
        \n
        \n
        The goal of this game is to be the first player to move all ten pieces to occupy the opposite’s side of the board.
        The game is playable with two, three, four, or six players. The first player to occupy all 10 destination spaces is the winner.
        \n
        \n
        -Launching the game
        The main menu is where the user can choose to start a new game, continue a saved game, or read the game rules. Selecting “NEW GAME” will take the user to the setup menu. Selecting “CONTINUE GAME” will take the player to the last game that was saved. There is only ONE save slot.
        \n
        \n
        -Starting a new game
        After selecting “new game” on the main menu, the user will be brought to the setup menu. The setup menu will have a tab labeled “LOCAL GAME” and another labeled “REMOTE GAME”. The LOCAL GAME tab allows the user to play a game on that specific tablet. The REMOTE GAME tab allows the user to play another user over the network.
        In the LOCAL GAME setup tab, select the number of desired players from a drop-down menu. Select each button that subsequently appears to toggle between human player, dumb computer player, or smart computer player. The Chinese checkers local game is configurable for two, three, four, and six players.
        In the REMOTE GAME setup tab, enter in the IP address of the desired tablet to connect to.
        After configuring the number and types of players in the game (for LOCAL GAME) or entering in the opponent’s IP address (for REMOTE GAME), click the button labeled “START GAME” to start a new game. The second graphical user interface (GUI), representing the game board, will appear. The players will be color-coded. Player one is blue, player two is green, player three is red, player four is purple, player five is yellow, and player six is purple.
        \n
        \n
        -Moving a piece
        To move a piece, tap on it to select it, then tap on one of the highlighted circles. The piece will now appear in the circle you just tapped. Pressing the confirm button will end the player\'s turn.
        \n
        \n
        -Saving the game
        A user, if it is his or her turn, can save the game by tapping the “SAVE” button in the main game GUI (Figure 4). If the user closes the app and opens it again later and taps the “Continue” button, that user can resume the most recently saved game. However, there is only one save slot, so every save overwrites the previous one.
        \n
        \n
        Ending the game</string>

</resources>